alteracao valete